create database-manage (cr)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information",
+			"Microsoft.EntityFrameworkCore.Query": "Information",
+			"Microsoft.EntityFrameworkCore.Database.Command": "Information"
+		}
+	},
+	"ConnectionStrings": {
+		"AppDbContext": "Data Source=localhost,3306; Initial Catalog=myapp_mvc; User ID=root;Password="
+	},
+	"AllowedHosts": "*"
 }
